--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 streamlit
 streamlit-webrtc
-opencv-python-headless
-tensorflow-cpu==2.17.0
-mediapipe==0.10.14
+tensorflow-cpu
+mediapipe
 av
 numpy<2.0.0
-protobuf<5.0.0dev,>=3.20.3
