--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
 streamlit-webrtc
-tensorflow-cpu
-mediapipe
+tensorflow-cpu==2.15.0
+mediapipe==0.10.9
+protobuf==3.20.3
 av
-numpy<2.0.0
+numpy<1.26.0
